refactor: improve port management
- Use separate ports for test DB in CI (5436) and local (5435)\n- Make nginx port configurable with proper defaults\n- Use environment variable for test DB port in config

--- a/config/test.env
+++ b/config/test.env
@@ -1,2 +1,2 @@
-DATABASE_URL='postgresql://postgres:postgres@localhost:5434/apadana_test'
+DATABASE_URL='postgresql://postgres:postgres@localhost:$TEST_DB_PORT/apadana_test'
 RESEND_API_KEY='re123_fake_RESEND_API_KEY'
