--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -189,8 +189,9 @@ tasks:
     silent: true
     env:
       COMPOSE_PROJECT_NAME: ci
-      # Avoid collision with main 433 port on host
-      NGINX_PORT: 443:444
+      # Avoid collision with main deployment ports
+      NGINX_PORT: 444
+      TEST_DB_PORT: 5436
     cmds:
       - task typecheck && task fix && task test:unit && task test:e2e:docker:run && task test:storybook:docker:run
 
@@ -439,7 +440,8 @@ tasks:
     deps: [vercel:env:pull, setup:local]
     silent: true
     env:
-      NGINX_PORT: 443:443
+      NGINX_PORT: 443
+      TEST_DB_PORT: 5435
       COMPOSE_PROJECT_NAME: apadana
     cmds:
       - docker-compose -f {{.DOCKER_COMPOSE}} up --build
