--- a/src/docker/docker-compose.yml
+++ b/src/docker/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     container_name: ${COMPOSE_PROJECT_NAME:-apadana}_nginx
     image: nginx:alpine
     ports:
-      - '${NGINX_PORT:-}'
+      - '${NGINX_PORT:-433}:433'
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./certs:/etc/nginx/certs:ro
@@ -198,7 +198,7 @@ services:
       POSTGRES_LOGGING: error
     command: ['postgres', '-c', 'log_min_messages=error']
     ports:
-      - '5434:5432'
+      - '${TEST_DB_PORT:-5432}:5432'
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -U postgres']
       interval: 5s
