--- a/src/docker/nginx/nginx.conf
+++ b/src/docker/nginx/nginx.conf
@@ -50,7 +50,7 @@ http {
 
     server {
         listen 443 ssl;
-        server_name dev.apadana.local;
+        server_name dev.apadana.localhost;
         ssl_certificate /etc/nginx/certs/cert.pem;
         ssl_certificate_key /etc/nginx/certs/key.pem;
 
@@ -71,7 +71,7 @@ http {
 
     server {
         listen 443 ssl;
-        server_name prod.apadana.local;
+        server_name prod.apadana.localhost;
         ssl_certificate /etc/nginx/certs/cert.pem;
         ssl_certificate_key /etc/nginx/certs/key.pem;
 
@@ -86,7 +86,7 @@ http {
 
     server {
         listen 443 ssl;
-        server_name prisma_studio.apadana.local;
+        server_name prisma_studio.apadana.localhost;
         ssl_certificate /etc/nginx/certs/cert.pem;
         ssl_certificate_key /etc/nginx/certs/key.pem;
 
@@ -101,7 +101,7 @@ http {
 
     server {
         listen 443 ssl;
-        server_name storybook.apadana.local;
+        server_name storybook.apadana.localhost;
         ssl_certificate /etc/nginx/certs/cert.pem;
         ssl_certificate_key /etc/nginx/certs/key.pem;
 
