Add output directory configuration and update ignored patterns
- Specify `output_dir` as "./repo-serialized" for serialized outputs.
- Add `.cache/` to the list of ignored patterns in addition to existing ones like '.next/' and 'node_modules/'.
```

--- a/yek.toml
+++ b/yek.toml
@@ -1,8 +1,12 @@
+# Output directory
+output_dir = "./repo-serialized"
+
 # Add patterns to ignore (in addition to .gitignore)
 [ignore_patterns]
 patterns = [
   # Generated files and directories
   '.next/',
+  '.cache/',
   'node_modules/',
   '.vercel/',
   '.turbo/',
