fix: update pnpm store path and cache configuration\n\n- Change pnpm store path from /home/node/.pnpm-store to /root/.pnpm-store to match volume mounts\n- Add id=pnpm-store to cache mounts for better caching

--- a/src/docker/Dockerfile.prod
+++ b/src/docker/Dockerfile.prod
@@ -12,7 +12,7 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
 
 # Setup pnpm
 RUN corepack enable && corepack prepare pnpm@9.9.0 --activate
-RUN pnpm config set store-dir /home/node/.pnpm-store \
+RUN pnpm config set store-dir /root/.pnpm-store \
   && pnpm config set update-notifier false \
   && pnpm config set node-deprecation-warnings false
 
@@ -24,11 +24,11 @@ COPY Taskfile.yml ./
 
 # Install dependencies with cache
 COPY pnpm-lock.yaml ./
-RUN --mount=type=cache,target=/home/node/.pnpm-store \
+RUN --mount=type=cache,target=/root/.pnpm-store,id=pnpm-store \
   task fetch
 
 COPY package.json ./
-RUN --mount=type=cache,target=/home/node/.pnpm-store \
+RUN --mount=type=cache,target=/root/.pnpm-store,id=pnpm-store \
   task install
 
 # Copy application files
