feat: add script to fetch deployer credentials
- Add script to fetch and print deployer credentials from Secrets Manager

- Add task to easily get credentials for any environment

- Print credentials in multiple formats (AWS profile, env vars, Vercel)

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -547,3 +547,9 @@ tasks:
         fi
         echo "Production environment is not healthy"
         exit 1
+
+  cdk:deployer:get-credentials:
+    desc: Get deployer credentials for {{.ENV}} environment
+    silent: true
+    cmds:
+      - pnpm tsx {{.CDK_SCRIPTS}}/get-deployer-credentials.ts
